test_suite/ill_formed/invalid_detup_rhs.mnl
fun main: [] => {
    detup [a, b] = 69420

    return 0
}